Changes in version 1.6

 - The Anisotropy filter can now be set to the AF value per texture layer. So no forced MAX_ANISOTROPY anymore. .irr files will probably fail, though.

 - AntiAlias parameter in SIrrCreationParameters is now an u8 value specifying the multisampling level (0 for disabled, 4,6,8, and others for anti-aliasing)

 - D3D devices use DISCARD for windowed renderbuffers now, can be faster.

 - Changed behaviour of PixelBlend16() / PixelBlend16_simd() so that they treat the 1 bit alpha of the source pixel as boolean, i.e. they draw either the source pixel, or the destination pixel, rather than "blending". (Issue revealed by the fix to IVideoDriver::makeColorKeyTexture()).

 - IVideoDriver::makeColorKeyTexture() bug fixed so that only alphas, not whole texel colors, are zeroed. An optional parameter allows using the old (buggy) behaviour for backwards compatibility.

 - position2d is now a synonym for vector2d. position2d is therefore marked as deprecated, although it's unlikely to be removed.

 - ISceneNodeAnimator now has a hasFinished() method.

 - ISceneNodeAnimatorCollisionResponse exposes the target node. Setting the node again resets the last position, allowing the node to be teleported.

 - Add a hitPosition out parameter to ISceneCollisionManager::getCollisionResultPosition() - this is a (small) API breaking change.

-------------------------------------
Changes in version 1.5.1 (??.?? 2009)

 - OSX device now supports shift and ctrl keys.

 - MD2 mesh loader: Now uses much less memory, reduced number of allocations when loading meshes.

-----------------------------------
Changes in version 1.5 (15.12.2008)

 - Construction calls for FPS camera changed to take speed in units/milliseconds, just as the setSpeed method does.

 - Code::Blocks workspaces added. C::B projects (using gcc) now output to /lib/gcc and /bin/gcc, when built on either Windows or Linux.
